Layout adjusted and Nav fixed on mobile

--- a/OpenAI.ChatGPT.Examples.Web/wwwroot/css/site.css
+++ b/OpenAI.ChatGPT.Examples.Web/wwwroot/css/site.css
@@ -21,12 +21,6 @@ body {
   margin-bottom: 60px;
 }
 
-/*.CEtextarea {
-    overflow-y: scroll;
-    height: 250px;
-    resize: none;
-    width: 100%;
-}*/
 textarea {
     background-color: #355E3B;
     color: wheat;
@@ -35,4 +29,16 @@ textarea {
     height: 250px;
     resize: none;
     width: 100%;
+}
+
+.footerNew {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height:40px;
+    background-color: darkgrey;
+    color: white;
+    text-align: center;
+    padding-top:8px
 }
